# BeginningAlgorithmContests2ed

ch1/examples/: 1-1.cpp  1-5.cpp  1-6.cpp  1-9.cpp  CMakeLists.txt
ch3/examples/: CMakeLists.txt  uva10082.cpp  uva1583.cpp  uva1584.cpp  uva272.cpp  uva304.cpp  uva401.cpp
ch3/exercises/: CMakeLists.txt  test  test.cpp  uva1225.cpp  uva1585.cpp  uva1586.cpp  uva455.cpp
